# aubit4gl_code

aubit4gldoc/trunk/: index.html
aubit4glsrc/trunk/: BUGS.txt  ChangeLog  Makefile  Makefile.in  README.install.binary  README.txt  acinclude.m4  aclocal.m4  configure  configure.in  noddy.txt  project.status  remake.mja  remake.win32  subproject.status  todo  todo.done
aubit4glsrc/trunk/cint/: a4gl_cint_4gldef.h  make_cintlib  runner
aubit4glsrc/trunk/common/dataio/: Makefile  Makefile.in  fgl.x  form_x.x  menu_x.x  mkversion  npcode.x  report.x  subproject.status  x_versions
aubit4glsrc/trunk/compilers/4glc/: 4glc.c  API_lex.spec  API_lex_int.h  API_parse.spec  Makefile  Makefile.in  a4gl_4glc_int.h  calltree.c  calltree_expr.c  class.c  clobber.c  commands.c  commands.h  common.c  compile.c  dim.c  expr_as_string_when_possible.c  expr_munging.c  expr_munging.h  extendedmap.c  field_handling.c  field_handling.h  fix_insert.c  gen_stack.h  generic.c  generic.h  globals.c  import.c  insert_curs.c  labels.c  lex.c  lexer.c  linearise.c  linearise.h  lint.c  lint.h  lint_main.c  list.c  load_prototypes.c  map.c  (+16 more)
aubit4glsrc/trunk/compilers/ace/: Makefile.in  a4gl_ace_int.h  ace.lex  ace.yacc  data.c  dump.c  dump_4gl.c  dump_perl.c  dump_report.c  fileio.c  generate.4gl  main.c  output.c  report.x  tables.c
aubit4glsrc/trunk/compilers/fcompile/: Make_dump  Makefile.in  a4gl_fcompile_int.h  common.4gl  common.h  create_default.c  decompile.c  decompile_4gl.c  dump.c  dump_4gl.c  dump_form.c  dump_form.h  dump_scr.c  fcompile.c  fnorpclib.c  form.c  form_x.x  fshow.4gl  global.4gl  mkstates  screen.lex  screen.yacc  where.c
aubit4glsrc/trunk/compilers/helpcompile/: Makefile-automake  Makefile.am  Makefile.in  a4gl_mkmess_int.h  amkmessage.c  mkmess.c  unmkmessage.c
aubit4glsrc/trunk/compilers/menus/: Makefile  Makefile.in  a4gl_mcompile_int.h  decompile.c  mcompile.c  menu.lex  menu.yacc  menu_x.x  mnorpclib.c
aubit4glsrc/trunk/compilers/pcode/: Makefile  README  checker_read.c  common_eval.c  common_io.c  common_print.c  compiler_list.c  compiler_main.c  compiler_optimize.c  compiler_param.c  compiler_pcode.c  compiler_variables.c  fgl_calls.h  lex.pregen.c  link.c  npcode.x  npcode_defs.h  register  runner_calls.c  runner_execute.c  runner_main.c  runner_vars.c  set_var.c  simple.lex  simple.yacc  std_calls.h  subproject.status  test_c.c
aubit4glsrc/trunk/compilers/sql/: 1.reqd  80.reqd  99.reqd  Makefile  alias.h  cmds.c  gen_lex  ilist.h  main.c  makefile  mkstates  not_used  util.c
aubit4glsrc/trunk/compilers/sqlcmd/: 1.reqd  80.reqd  Makefile  cmds.c  testit.c  util.c
aubit4glsrc/trunk/compilers/wsdl2fgl/: main.c  simple.lex  simple.yacc  structs.c  wsdl2fgl.h
aubit4glsrc/trunk/compilers/xgen/: Makefile  Makefile.in  a4gl_xgen_int.h  main.c  x.lex  x.yacc
aubit4glsrc/trunk/compilers/xgen_new/: Makefile  dump.c  elements.h  main.c  x.lex
aubit4glsrc/trunk/compilers/yacctoebnf/: ebnf.lex  ebnf.yacc  entries  main.c  makefile  mkcommands  parser.lex  parser.yacc  process_to_eps  setup-ebnf2ps.el
aubit4glsrc/trunk/docs/: CREDITS  LICENSE  README-Windows.txt  debugging.txt  exampleWSCall.html  manaual_to-do.txt  web_services.txt
aubit4glsrc/trunk/docs/win32/: hello.4gl
aubit4glsrc/trunk/etc/: Makefile-install  aubit-InnoSetup.iss.in  aubit-rpm.spec.in  aubitbuild.cron.sh  aubitrc.binary.default  aubitrc.in  default.apspec.in  gtkrc_2
aubit4glsrc/trunk/etc/convertsql/: INFORMIX-DB2.cnv  INFORMIX-DB2VM.cnv  INFORMIX-INFORMIX.cnv  INFORMIX-INGRES.cnv  INFORMIX-MYSQL.cnv  INFORMIX-MYSQLDIRECT.cnv  INFORMIX-ORACLE.cnv  INFORMIX-POSTGRES.cnv  INFORMIX-POSTGRES8.cnv  INFORMIX-POSTGRESQL.cnv  INFORMIX-SQLITE.cnv  INFORMIX-SQLSERVER.cnv  ORACLE-INFORMIX.cnv  README.txt
aubit4glsrc/trunk/etc/debian/: aubit4gl.postinst.debhelper  config.in  control.in  prerm.in  rules  subproject.status  templates.in
aubit4glsrc/trunk/etc/import/: README  a4gl_file
aubit4glsrc/trunk/glade/ide/: Makefile  ide1.4gl  makefile
aubit4glsrc/trunk/help/: Makefile  help_POSTGRESQL8.msg  help_aubit.iem  help_ecpg.iem  help_sqlite.msg  mkhelp_aubit
aubit4glsrc/trunk/images/: stock.lst
aubit4glsrc/trunk/incl/: Makefile-common.in  Makefile-install.mki  a4gl.mk  a4gl_4gl_callable.h  a4gl_API_exdata.h  a4gl_API_exreport.h  a4gl_API_rpc.h  a4gl_API_sql.h  a4gl_builtin_funcs.h  a4gl_esql.h  a4gl_esql_infoflex.h  a4gl_esql_infx.h  a4gl_esql_ingres.h  a4gl_esql_postgres.h  a4gl_esql_querix.h  a4gl_esql_sap.h  a4gl_expr.h  a4gl_incl_4gldef.h  a4gl_incl_4glhdr.h  a4gl_incl_config.h.in  a4gl_incl_infx.h  a4gl_libaubit4gl.h  a4gl_memhandling.h  a4gl_rep_structure.h  a4gl_screenio.h  a4gl_sql.h  d4gl.mk  decimal.h  footer-c.mki  footer.mki  header.mki  i4gl.mk  q4gl.mk
aubit4glsrc/trunk/incl/compat/: decimal.h
aubit4glsrc/trunk/lib/: Makefile  Makefile.in  reflection.c
aubit4glsrc/trunk/lib/data/: errs
aubit4glsrc/trunk/lib/libaubit4gl/: API_esql.spec  API_exreport.c  API_exreport.spec  API_form.spec  API_help.spec  API_lex.spec  API_lowlevel.spec  API_menu.spec  API_msg.spec  API_packer.spec  API_rpc.c  API_rpc.spec  API_sql.c  API_sql.spec  API_sqlparse.spec  API_ui.spec  Makefile  Makefile.in  Makefile.static  a4gl_libaubit4gl_int.h  assert.c  attributes.c  basechannel.c  builtin.c  builtin_d.c  calldll.c  class.c  common_ui.c  compat.c  conv.c  corba_server_util.c  curl.c  data_if.c  dataio.c  datatypes.c  dates.c  debug.c  decimal.c  dir.c  dmy.c  (+58 more)
aubit4glsrc/trunk/lib/libesql/: Makefile  helper_funcs.ec  make_static  postgres.ec
aubit4glsrc/trunk/lib/libexdata/: Makefile.in  a4gl_lib_exdata_mpz_int.h  mpz.c
aubit4glsrc/trunk/lib/libhelp/: Makefile  helplib.4gl
aubit4glsrc/trunk/lib/liblex/: a4gl_lib_lex_int.h
aubit4glsrc/trunk/libltdl/: configure  ltdl.c
aubit4glsrc/trunk/node/: README  node_packages  server.js
aubit4glsrc/trunk/tools/: project.status  search.h
gen4gl/trunk/fglbld/: Makefile.in  configure  configure.in  cpopup.alt  i4glrds.mk  install.sh  instfile.sh  mkdist.sh  mkfest.sh  mkfglgo.dst  mkselect.alt  mkshar.sh  mksource.sh  perform.mk  perform.msg
(+12832 files in other folders)
