# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.50)

AC_INIT([Aubit4gl],[0.2],[aubit4gl-discuss@lists.sourceforge.net])
AC_CONFIG_AUX_DIR(etc/config)
AC_CONFIG_SRCDIR([compilers/4glc/4glc.c])
AC_CONFIG_HEADER([incl/config.h])

AC_CANONICAL_SYSTEM
test_rpclib="1"
case "$target_os" in
  linux-gnu)
    echo "Linux gnu"
    test_rpclib="0"
		;;
	*linux*)
    test_rpclib="0"
		;;
  cygwin)
    ODBC=odbc32;
    ODBCMANAGER=$ODBC;
    PDFBUILD=no	
esac


AC_SUBST(aubitdir)dnl
aubitdir=`pwd`

# Checks for programs.
AC_PROG_YACC
AC_PROG_CC
AC_PROG_LEX
#AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB


AC_PATH_PROG(PERL, perl, no)
AC_SUBST(PERL)dnl
#if test "$PERL" != no; then
  #AC_MSG_WARN([perl found])
#else
  #AC_MSG_WARN([perl is not found])
#fi

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lc':
AC_CHECK_LIB([c], [main])
# FIXME: Replace `main' with a function in `-lcurses':
AC_CHECK_LIB([curses], [main])
# FIXME: Replace `main' with a function in `-ldl':
AC_CHECK_LIB([dl], [main])
# FIXME: Replace `main' with a function in `-lform':
AC_CHECK_LIB([form], [main])
# FIXME: Replace `main' with a function in `-lgdk':
AC_CHECK_LIB([gdk], [main])
# FIXME: Replace `main' with a function in `-lglib':
AC_CHECK_LIB([glib], [main])
# FIXME: Replace `main' with a function in `-lgtk':
AC_CHECK_LIB([gtk], [main])
# FIXME: Replace `main' with a function in `-liksemel':
AC_CHECK_LIB([iksemel], [main])
# FIXME: Replace `main' with a function in `-liodbc':
AC_CHECK_LIB([iodbc], [main])
# FIXME: Replace `main' with a function in `-lodbc':
AC_CHECK_LIB([odbc], [main])
# FIXME: Replace `main' with a function in `-lodbc32':
AC_CHECK_LIB([odbc32], [main])
# FIXME: Replace `main' with a function in `-lpanel':
AC_CHECK_LIB([panel], [main])
# FIXME: Replace `main' with a function in `-lpdf':
AC_CHECK_LIB([pdf], [main])
if test "$test_rpclib" = "1"
then
  # FIXME: Replace `main' with a function in `-lrpclib':
  AC_CHECK_LIB([rpclib], [main])
else
  AC_MSG_RESULT([Not checking rpclib because we are in Linux])
fi

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([alloca.h errno.h locale.h malloc.h memory.h netdb.h netinet/in.h stddef.h stdlib.h string.h strings.h sys/socket.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([floor gethostbyname inet_ntoa memset pow putenv re_comp regcomp select setenv setlocale socket strcasecmp strchr strdup strncasecmp strrchr strstr strtol])

AC_CONFIG_FILES([Makefile
                 etc/a4glrc
                 etc/aubitenv
                 etc/aubitbuild.mk
                 compilers/4glc/Makefile
                 compilers/4glc/rules/Makefile
                 compilers/fcompile/Makefile
                 compilers/helpcompile/Makefile
                 compilers/menus/Makefile
                 lib/libpdf/Makefile
                 lib/libgui/Makefile
                 lib/libsql/nosql/Makefile
                 lib/libsql/odbc/Makefile
                 lib/Makefile
                 tools/adbaccess/Makefile
                 tools/adbload/Makefile
                 tools/html/Makefile
                 tools/ide/Makefile
                 tools/jabber/Makefile
                 tools/odbctest/Makefile
                 tools/test/gui/Makefile
                 tools/test/Makefile])
AC_OUTPUT
