# +----------------------------------------------------------------------+
# | Aubit 4gl Language Compiler Version $.0                              |
# +----------------------------------------------------------------------+
# | Copyright (c) 2000-1 Aubit Development Team (See Credits file)       |
# +----------------------------------------------------------------------+
# | This program is free software; you can redistribute it and/or modify |
# | it under the terms of one of the following licenses:                 |
# |                                                                      |
# |  A) the GNU General Public License as published by the Free Software |
# |     Foundation; either version 2 of the License, or (at your option) |
# |     any later version.                                               |
# |                                                                      |
# |  B) the Aubit License as published by the Aubit Development Team and |
# |     included in the distribution in the file: LICENSE                |
# |                                                                      |
# | This program is distributed in the hope that it will be useful,      |
# | but WITHOUT ANY WARRANTY; without even the implied warranty of       |
# | MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the        |
# | GNU General Public License for more details.                         |
# |                                                                      |
# | You should have received a copy of both licenses referred to here.   |
# | If you did not, or have any questions about Aubit licensing, please  |
# | contact afalout@ihug.co.nz                                           |
# +----------------------------------------------------------------------+
#
# $Id: configure.in,v 1.11 2002-01-13 09:40:43 afalout Exp $
#

# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.50)

AC_INIT([Aubit4gl],[0.2],[aubit4gl-discuss@lists.sourceforge.net])
AC_CONFIG_AUX_DIR(etc/config)
AC_CONFIG_SRCDIR([compilers/4glc/4glc.c])
AC_CONFIG_HEADER([incl/config.h])

AC_CANONICAL_SYSTEM

#<Aubit specifics ---------------------------------------------->
test_rpclib="1"
case "$target_os" in
	linux-gnu)
	    echo "Linux gnu"
    	test_rpclib="0"
		;;
	*linux*)
	    test_rpclib="0"
		;;
	cygwin)
	    ODBC=odbc32;
    	ODBCMANAGER=$ODBC;
	    PDFBUILD=no
esac

AC_SUBST(aubitdir)dnl
aubitdir=`pwd`

#</Aubit specifics ---------------------------------------------->

# Checks for programs.
AC_PROG_YACC
AC_PROG_CC
AC_PROG_LEX
#AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB


AC_PATH_PROG(PERL, perl, no)
AC_PATH_PROG(SWIG, swig, no)
AC_PATH_PROG(RPCGEN, rpcgen, no)
AC_PATH_PROG(GTK_CONFIG, gtk-config, no)
AC_PATH_PROG(PKG_CONFIG, pkg-config, no)


AC_SUBST(PERL)dnl
#if test "$PERL" != no; then
  #AC_MSG_WARN([perl found])
#else
  #AC_MSG_WARN([perl is not found])
#fi

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lc':
AC_CHECK_LIB([c], [main])
# FIXME: Replace `main' with a function in `-lcurses':
AC_CHECK_LIB([curses], [main])
# FIXME: Replace `main' with a function in `-ldl':
AC_CHECK_LIB([dl], [main])
# FIXME: Replace `main' with a function in `-lform':
AC_CHECK_LIB([form], [main])
# FIXME: Replace `main' with a function in `-lgdk':
AC_CHECK_LIB([gdk], [main])
# FIXME: Replace `main' with a function in `-lglib':
AC_CHECK_LIB([glib], [main])
# FIXME: Replace `main' with a function in `-lgtk':
AC_CHECK_LIB([gtk], [main])
# FIXME: Replace `main' with a function in `-liksemel':
AC_CHECK_LIB([iksemel], [main])
# FIXME: Replace `main' with a function in `-liodbc':
AC_CHECK_LIB([iodbc], [main])
# FIXME: Replace `main' with a function in `-lodbc':
AC_CHECK_LIB([odbc], [main])
# FIXME: Replace `main' with a function in `-lodbc32':
AC_CHECK_LIB([odbc32], [main])
# FIXME: Replace `main' with a function in `-lpanel':
AC_CHECK_LIB([panel], [main])
# FIXME: Replace `main' with a function in `-lpdf':
AC_CHECK_LIB([pdf], [main])
if test "$test_rpclib" = "1"
then
  # FIXME: Replace `main' with a function in `-lrpclib':
  AC_CHECK_LIB([rpclib], [main])
else
  AC_MSG_RESULT([Not checking rpclib because we are in Linux])
fi

#<Aubit specifics ---------------------------------------------->

#We can also use this method if nececery:
#for one_lib_aubit in $LIBS
#do
#	case $one_lib_aubit in
#	  -lgtk )
#	    echo "Have GTK GUI"
#
#		GTKBUILD=yyyyeeeessss
#	  ;;
#	  * )
#	    echo LIBS = $one_lib_aubit
#	esac
#done


#check if we have all we need to make GTK GUI
AC_SUBST(GTKBUILD)dnl
GTKBUILD=no
AC_SUBST(AUBITGUI)dnl
AUBITGUI=text
if test $ac_cv_lib_gtk_main = yes; then
	if test $ac_cv_lib_glib_main = yes; then
		if test $ac_cv_lib_gdk_main = yes; then
			GTKBUILD=yes
			AUBITGUI=gtk
        fi
    fi
fi

#Fixme: we should test for GTK+ versions, and gtk-config (pkg-config) scritp

#check which ODBC manager/driver to use:
AC_SUBST(A4GL_SQLTYPE)dnl
A4GL_SQLTYPE=nosql
AC_SUBST(HAVE_IODBC)dnl
HAVE_IODBC=no
AC_SUBST(HAVE_UNIXODBC)dnl
HAVE_UNIXODBC=no
AC_SUBST(ODBC_LIB_NAME)dnl
ODBC_LIB_NAME=noodbc

if test $ac_cv_lib_iodbc_main = yes; then
		A4GL_SQLTYPE=iodbc
		ODBC_LIB_NAME=iodbc
		HAVE_IODBC=yes
fi
if test $ac_cv_lib_odbc_main = yes; then
		#if both iIODBC and unixODBC are installed, unixODBC is default:
		A4GL_SQLTYPE=unixodbc
		ODBC_LIB_NAME=odbc
		HAVE_UNIXODBC=yes
fi


#Check if we can build PDFlib support:
AC_SUBST(A4GL_PDFTYPE)dnl
A4GL_PDFTYPE=NOPDF
AC_SUBST(USE_PDF)dnl
USE_PDF=no
AC_SUBST(PDFBUILD)dnl
PDFBUILD=no
if test $ac_cv_lib_pdf_main = yes; then
		A4GL_PDFTYPE=PDF
		USE_PDF=yes
        PDFBUILD=yes
fi

#Check if we can build Jabber support:
AC_SUBST(JABBERBUILD)dnl
JABBERBUILD=no
if test $ac_cv_lib_iksemel_main = yes; then
		JABBERBUILD=yes
fi


#Check if we can build Perl generating compiler:
AC_SUBST(PERLBUILD)dnl
PERLBUILD=no
if test "$PERL" != no; then
	if test "$SWIG" != no; then
		#Fixme: How to test for MakeMaker Perl module ?
			PERLBUILD=yes
    fi
fi


#</Aubit specifics ---------------------------------------------->



# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([alloca.h errno.h locale.h malloc.h memory.h netdb.h netinet/in.h stddef.h stdlib.h string.h strings.h sys/socket.h sys/time.h unistd.h gtk/gtk.h gtk.h ])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([floor gethostbyname inet_ntoa memset pow putenv re_comp regcomp select setenv setlocale socket strcasecmp strchr strdup strncasecmp strrchr strstr strtol])

AC_CONFIG_FILES([Makefile
                 etc/aubitrc
                 incl/Makefile-common
				 compilers/4glc/Makefile
                 compilers/4glc/rules/Makefile
                 compilers/fcompile/Makefile
                 compilers/helpcompile/Makefile
                 compilers/menus/Makefile
                 lib/libpdf/Makefile
                 lib/libgui/Makefile
                 lib/libsql/nosql/Makefile
                 lib/libsql/odbc/Makefile
		lib/extra_libs/file/Makefile
                 lib/Makefile
                 tools/adbaccess/Makefile
                 tools/adbload/Makefile
                 tools/html/Makefile
                 tools/ide/Makefile
                 tools/jabber/Makefile
                 tools/odbctest/Makefile
                 tools/test/gui/Makefile
                 tools/test/Makefile])
AC_OUTPUT

#Obsoleted by aubitrc:
#                 etc/a4glrc
#                 etc/aubitenv
#                 etc/aubitbuild.mk
