# +----------------------------------------------------------------------+
# | Aubit 4gl Language Compiler Version $.0                              |
# +----------------------------------------------------------------------+
# | Copyright (c) 2000-1 Aubit Development Team (See Credits file)       |
# +----------------------------------------------------------------------+
# | This program is free software; you can redistribute it and/or modify |
# | it under the terms of one of the following licenses:                 |
# |                                                                      |
# |  A) the GNU General Public License as published by the Free Software |
# |     Foundation; either version 2 of the License, or (at your option) |
# |     any later version.                                               |
# |                                                                      |
# |  B) the Aubit License as published by the Aubit Development Team and |
# |     included in the distribution in the file: LICENSE                |
# |                                                                      |
# | This program is distributed in the hope that it will be useful,      |
# | but WITHOUT ANY WARRANTY; without even the implied warranty of       |
# | MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the        |
# | GNU General Public License for more details.                         |
# |                                                                      |
# | You should have received a copy of both licenses referred to here.   |
# | If you did not, or have any questions about Aubit licensing, please  |
# | contact afalout@ihug.co.nz                                           |
# +----------------------------------------------------------------------+
#
# $Id: configure.in,v 1.14 2002-01-20 04:18:41 afalout Exp $
#

# Process this file with autoconf to produce a configure script.


## ==================================================================
##                             Initialise
## ==================================================================


AC_PREREQ(2.50)

#Need to be here too, to be used in AC_INIT call:
AUBIT_VERSION=`cat tools/project/version`
AUBIT_BUILD=`cat tools/project/build`

#AC_INIT([Aubit4gl],[0.2],[aubit4gl-discuss@lists.sourceforge.net])
AC_INIT([Aubit4gl],[$AUBIT_VERSION.$AUBIT_BUILD],[aubit4gl-discuss@lists.sourceforge.net])
#location of additional Autoconf files
AC_CONFIG_AUX_DIR(etc/config)
#FIXME: what is this?
AC_CONFIG_SRCDIR([compilers/4glc/4glc.c])
#Location of llobal header to receive "#define xxxxx y" replacements:
AC_CONFIG_HEADER([incl/config.h])

AC_CANONICAL_SYSTEM

## ==================================================================
##                Define what will get substituted
## ==================================================================

AC_SUBST(aubitdir)
AC_SUBST(COMPILE_DATE)
AC_SUBST(AUBIT_VERSION)
AC_SUBST(AUBIT_BUILD)

AC_SUBST(IFX_ESQL_FLAGS)
AC_SUBST(IFX_LIBS)
AC_SUBST(IFX_LFLAGS)
AC_SUBST(IFX_INCLUDE)
AC_SUBST(IFX_C_MAKE)
AC_SUBST(INFORMIXDIR)

AC_SUBST(USE_PDF)
AC_SUBST(PDFBUILD)
AC_SUBST(A4GL_PDFTYPE)

AC_SUBST(A4GL_SQLTYPE)
AC_SUBST(ODBC_LIB_NAME)

AC_SUBST(HAVE_UNIXODBC)
AC_SUBST(UNIXODBC_INCLUDE)
AC_SUBST(UNIXODBC_LFLAGS)
AC_SUBST(UNIXODBC_LIBS)

AC_SUBST(HAVE_IODBC)
AC_SUBST(IODBC_INCLUDE)
AC_SUBST(IODBC_LFLAGS)
AC_SUBST(IODBC_LIBS)

AC_SUBST(GTKBUILD)
AC_SUBST(AUBITGUI)
AC_SUBST(JABBERBUILD)
AC_SUBST(PERL)
AC_SUBST(PERLBUILD)

## ==================================================================
##                             Defaults
## ==================================================================


#need to do this again, since the earlyer one was before initialisation,
#and will not get in substitution otherwise:
AUBIT_VERSION=`cat tools/project/version`
AUBIT_BUILD=`cat tools/project/build`

COMPILE_DATE=`date +%d-%m-%Y`
aubitdir=`pwd`
test_rpclib="1"
GTKBUILD=no
AUBITGUI=text
A4GL_SQLTYPE=nosql
HAVE_IODBC=no
HAVE_UNIXODBC=no
ODBC_LIB_NAME=noodbc
A4GL_PDFTYPE=NOPDF
USE_PDF=no
PDFBUILD=no
PERLBUILD=no
JABBERBUILD=no
AUBIT_DEBUG=1


case "$target_os" in
	linux-gnu)
	    #echo "Linux gnu"
        #rpclib is part of clib on Linux
		test_rpclib="0"
		;;
	*linux*)
	    test_rpclib="0"
		;;
	cygwin)
		ODBC=odbc32;
    	ODBCMANAGER=$ODBC;
        ;;
    *)
        echo "Please report success or failure to compile Aubit on this platform to the mailing list. Thank you."
        ;;
esac

#Note: all command line switches like "--xxxx-wwwww" are automativaly
#converted to shell variables in "xxxxx_wwwww" format.

if test "$enable_debug" = "no" ; then
	AC_MSG_WARN(Debugging disabled)
	AUBIT_DEBUG=0
fi

## ==================================================================
##                  Checks for standard programs
## ==================================================================

AC_PROG_YACC
if test "$YACC" != "bison -y"; then
    #AC_MSG_WARN(You will need bison if you'd want to regenerate the Aubit parsers.)
    AC_MSG_ERROR(Sorry, current Aubit source distribution will not work without Bison.)
else
    AC_MSG_CHECKING(bison version)
#   set `bison --version| sed -e 's/^GNU Bison version //' -e 's/\./ /g'`
	set `bison --version|head -1|sed -e 's/^GNU Bison version //' -e 's/^bison (GNU Bison) //' -e 's/\./ /g'`

    if test "$1" = "1" -a "$2" -lt "25"; then
        AC_MSG_WARN(You will need bison 1.25 if you'd want to regenerate the Aubit parsers (found $1.$2).)
    fi
    AC_MSG_RESULT($1.$2 (ok))
fi

AC_PROG_CC
AC_PROG_LEX
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_PROG_AWK
AC_PATH_PROG(PERL, perl, no)
AC_PATH_PROG(SWIG, swig, no)
AC_PATH_PROG(SH, sh, /bin/sh)
AC_PATH_PROG(DOXYGEN, doxygen, no)
AC_PATH_PROG(CVS_CLIENT, cvs, no)
AC_PATH_PROG(LDD, ldd, no)

#FIXME: stop if rpcgen is not found on any platform other then Windows
AC_PATH_PROG(RPCGEN, rpcgen, no)

#Fixme: set GTKBUILD=no if one of this two is not found, even if libraries
#are installed
AC_PATH_PROG(GTK_CONFIG, gtk-config, no)
AC_PATH_PROG(PKG_CONFIG, pkg-config, no)


#AC_PATH_PROG(PROG_SENDMAIL, sendmail, /usr/lib/sendmail, $PATH /usr/bin /usr/sbin /usr/etc /etc /usr/ucblib)
#if test -n "$PROG_SENDMAIL"; then
#  AC_DEFINE(HAVE_SENDMAIL)
#fi


## ==================================================================
##                 Checks for other 4gl compiles
## ==================================================================

#classic Informix 4gl P-coode

#classic Informix 4gl C-code

#4Js BDL / Informix D4GL

#Querix

#Plexus - only on WIN32

## ==================================================================
##                 Checks for web server CGI support
## ==================================================================






#<This block was compied from PHP 3.x configure.in -------------------->

## ==================================================================
##                 Checks for Informix ESQL/C support
## ==================================================================

AC_MSG_CHECKING(for Informix ESQL/C support)
AC_ARG_WITH(informix,
[  --with-informix[=DIR]   Include Informix ESQL/C support.  DIR is the Informix base
                          install directory, defaults to ${INFORMIXDIR:-nothing}.],
[
	if test "$withval" != "no"; then
		if test "$INFORMIXDIR" = ""; then
			INFORMIX_WARNING="
WARNING: You asked for Informix ESQL/C support, but don't have \\\$INFORMIXDIR
	 environment value set up. Configuring and compiling Informix
	 support is impossible and has been turned off. Please
	 try again after setting up your environment."
			#IFX_C_MAKE='touch functions/ifx.c'
			AC_MSG_RESULT(no)
		else
			if test "$withval" = "yes"; then
				IFX_INCDIR=$INFORMIXDIR/incl/esql
				IFX_LIBDIR="-L$INFORMIXDIR/lib -L$INFORMIXDIR/lib/esql"
			else
				IFX_INCDIR=$withval/incl/esql
				IFX_LIBDIR="-L$withval/lib -L$withval/lib/esql"
				if test "$withval" != "$INFORMIXDIR"; then
					INFORMIX_WARNING="
WARNING: You specified Informix base install directory that is different
	 than your \\\$INFORMIXDIR environment variable. You'd better know
	 exactly what you are doing."
				fi
    		fi
			IFX_INCLUDE=-I$IFX_INCDIR
			IFX_LFLAGS=$IFX_LIBDIR
			if test -z "$IFX_LIBS"; then
				IFX_LIBS=`esql -libs | sed -e 's/-lm$//'`
				dnl  -lm twice otherwise?
				IFX_LIBS=`echo $IFX_LIBS | sed -e 's/Libraries to be used://g' -e 's/esql: error -55923: No source or object file\.//g'`
				dnl Seems to get rid of newlines.
				dnl According to Perl's DBD-Informix, might contain these strings.
			else
				dnl Allow override to use static and/or threaded libs
				IFX_LIBS="$IFX_LIBS"
			fi
			CFLAGS="$CFLAGS $IFX_INCLUDE"
			LDFLAGS="$LDFLAGS $IFX_LFLAGS"

		    if test "`uname -s 2>/dev/null`" = "AIX"; then
				CFLAGS="$CFLAGS -D__H_LOCALEDEF"
			fi
			AC_DEFINE(HAVE_IFX)
			AC_MSG_CHECKING([Informix version])
			IFX_VERSION=[`esql -V | sed -ne '1 s/^[^0-9]*\([0-9]\)\.\([0-9]*\).*/\1\2/p'`]
			if test $IFX_VERSION -ge "900"; then
				AC_DEFINE(HAVE_IFX_IUS)
				IFX_ESQL_FLAGS="-EDHAVE_IFX_IUS"
			else
				IFX_ESQL_FLAGS="-EUHAVE_IFX_IUS"
			fi

			AC_DEFINE_UNQUOTED(IFX_VERSION, $IFX_VERSION)
			AC_MSG_RESULT(yes)
			IFX_C_MAKE="(esql -e $IFX_ESQL_FLAGS functions/ifx.ec; mv ifx.c functions)"
		fi
	else
		INFORMIXDIR=
		IFX_C_MAKE='touch functions/ifx.c'
		AC_MSG_RESULT(no)
	fi
],[
  AC_MSG_RESULT(--with-informix not specified)
])

################## PHP V 4 Informix esql
#PHP_ARG_WITH(informix,for Informix support,
#[  --with-informix[=DIR]   Include Informix support.  DIR is the Informix base
#                          install directory, defaults to ${INFORMIXDIR:-nothing}.])
#
#if test "$PHP_INFORMIX" != "no"; then
#
#  PHP_EXTENSION(informix, $ext_shared)
#  PHP_SUBST(INFORMIX_SHARED_LIBADD)
#
#  if test "$INFORMIXDIR" = ""; then
#    AC_MSG_ERROR([INFORMIXDIR environment variable is not set.])
#  fi
#
#  if test "$PHP_INFORMIX" = "yes"; then
#    PHP_ADD_INCLUDE($INFORMIXDIR/incl/esql)
#    PHP_ADD_LIBPATH($INFORMIXDIR/lib, INFORMIX_SHARED_LIBADD)
#    PHP_ADD_LIBPATH($INFORMIXDIR/lib/esql, INFORMIX_SHARED_LIBADD)
#  else
#    if test "$PHP_INFORMIX" != "$INFORMIXDIR"; then
#      AC_MSG_ERROR([Specified Informix base install directory is different than your INFORMIXDIR environment variable.])
#    fi
#    PHP_ADD_INCLUDE($PHP_INFORMIX/incl/esql)
#    PHP_ADD_LIBPATH($PHP_INFORMIX/lib, INFORMIX_SHARED_LIBADD)
#    PHP_ADD_LIBPATH($PHP_INFORMIX/lib/esql, INFORMIX_SHARED_LIBADD)
#  fi
#
#  dnl Check if thread safety flags are needed
#  if test "$enable_experimental_zts" = "yes"; then
#    IFX_ESQL_FLAGS="-thread"
#    CPPFLAGS="$CPPFLAGS -DIFX_THREAD"
#  else
#    IFX_ESQL_FLAGS=""
#  fi
#
#  IFX_LIBS=`THREADLIB=POSIX $INFORMIXDIR/bin/esql $IFX_ESQL_FLAGS -libs`
#  IFX_LIBS=`echo $IFX_LIBS | sed -e 's/Libraries to be used://g' -e 's/esql: error -55923: No source or object file\.//g'`
#  dnl Seems to get rid of newlines.
#  dnl According to Perls DBD-Informix, might contain these strings.
#
#  case "$host_alias" in
#    *aix*)
#      CPPFLAGS="$CPPFLAGS -D__H_LOCALEDEF";;
#  esac
#
#  AC_MSG_CHECKING([Informix version])
#  IFX_VERSION=[`$INFORMIXDIR/bin/esql -V | sed -ne '1 s/^[^0-9]*\([0-9]\)\.\([0-9]*\).*/\1\2/p'`]
#  AC_MSG_RESULT($IFX_VERSION)
#  AC_DEFINE_UNQUOTED(IFX_VERSION, $IFX_VERSION, [ ])
#
#  if test $IFX_VERSION -ge "900"; then
#    AC_DEFINE(HAVE_IFX_IUS,1,[ ])
#    IFX_ESQL_FLAGS="$IFX_ESQL_FLAGS -EDHAVE_IFX_IUS"
#  else
#    IFX_ESQL_FLAGS="$IFX_ESQL_FLAGS -EUHAVE_IFX_IUS"
#  fi
#  PHP_SUBST(IFX_ESQL_FLAGS)
#
#  for i in $IFX_LIBS; do
#    case "$i" in
#      *.o)
#        IFX_LIBOBJS="$IFX_LIBOBJS $i"
#        PHP_ADD_LIBPATH($ext_builddir, INFORMIX_SHARED_LIBADD)
#        PHP_ADD_LIBRARY_DEFER(phpifx, 1, INFORMIX_SHARED_LIBADD)
#        ;;
#      -lm)
#        ;;
#      -lc)
#        ;;
#      -l*)
#        lib=`echo $i | cut -c 3-`
#        PHP_ADD_LIBRARY_DEFER($lib, 1, INFORMIX_SHARED_LIBADD)
#        ;;
#      *.a)
#        case "`uname -s 2>/dev/null`" in
#          UnixWare | SCO_SV | UNIX_SV)
#            DLIBS="$DLIBS $i"
#            ;;
#          *)
#            ac_dir="`echo $i|sed 's#[^/]*$##;s#\/$##'`"
#            ac_lib="`echo $i|sed 's#^/.*/lib##g;s#\.a##g'`"
#            DLIBS="$DLIBS -L$ac_dir -l$ac_lib"
#            ;;
#        esac
#        ;;
#    esac
#  done
#
#  AC_DEFINE(HAVE_IFX,1,[ ])
#  PHP_SUBST(INFORMIXDIR)
#  PHP_SUBST(IFX_LIBOBJS)
#fi


## ==================================================================
##                 Checks for PostgreSQL support
## ==================================================================

AC_MSG_CHECKING(for PostgresSQL support)
AC_ARG_WITH(pgsql,
[  --with-pgsql[=DIR]      Include PostgresSQL support.  DIR is the PostgresSQL
                          base install directory, defaults to /usr/local/pgsql.],
[

  if test "$withval" != "no"; then
    if test "$withval" = "yes"; then
		withval=/usr/local
    fi

    PGSQL_INCDIR=$withval/include
    test -d $withval/include/pgsql && PGSQL_INCDIR=$withval/include/pgsql
    test -d $withval/pgsql/include && PGSQL_INCDIR=$withval/pgsql/include
    test -d $withval/include/postgresql && PGSQL_INCDIR=$withval/include/postgresql
    PGSQL_LIBDIR=$withval/lib
    test -d $withval/lib/pgsql && PGSQL_LIBDIR=$withval/lib/pgsql
    test -d $withval/pgsql/lib && PGSQL_LIBDIR=$withval/pgsql/lib
    test -d $withval/lib/postgresql && PGSQL_LIBDIR=$withval/lib/postgresql

    PGSQL_INCLUDE=-I$PGSQL_INCDIR
    PGSQL_LFLAGS=-L$PGSQL_LIBDIR
    PGSQL_LIBS=-lpq
#configure.in:309: error: possibly undefined macro: AC_ADD_LIBRARY_WITH_PATH
#configure.in:310: error: possibly undefined macro: AC_ADD_INCLUDE
#	AC_ADD_LIBRARY_WITH_PATH(pq, $PGSQL_LIBDIR)
#   AC_ADD_INCLUDE($PGSQL_INCDIR)

    old_CFLAGS=$CFLAGS; old_LDFLAGS=$LDFLAGS; old_LIBS=$LIBS
    CFLAGS="$CFLAGS $PGSQL_INCLUDE"
    LDFLAGS="$LDFLAGS $PGSQL_LFLAGS"
    LIBS="$LIBS $PGSQL_LIBS"
    AC_DEFINE(HAVE_PGSQL)
    AC_MSG_RESULT(yes)
    AC_CHECK_FUNC(PQcmdTuples,AC_DEFINE(HAVE_PQCMDTUPLES))
    CFLAGS=$old_CFLAGS; LDFLAGS=$old_LDFLAGS; LIBS=$old_LIBS
  else
    AC_MSG_RESULT(no)
  fi
],[
  AC_MSG_RESULT(--with-pgsql not specified)
])

#</This block was compied from PHP 3.x configure.in -------------------->

#<This block was copied from PHP 4.x ext/odbc/config.m4 ---------------->

################################ PHP V 4 PG test:
#AC_DEFUN(PGSQL_INC_CHK,[if test -r $i$1/libpq-fe.h; then PGSQL_DIR=$i; PGSQL_INCDIR=$i$1])
#
#PHP_ARG_WITH(pgsql,for PostgreSQL support,
#[  --with-pgsql[=DIR]      Include PostgreSQL support.  DIR is the PostgreSQL
#                          base install directory, defaults to /usr/local/pgsql.
#                          Set DIR to "shared" to build as a dl, or "shared,DIR"
#                          to build as a dl and still specify DIR.])
#
#if test "$PHP_PGSQL" != "no"; then
#  PHP_EXPAND_PATH($PHP_PGSQL, PHP_PGSQL)
#  for i in /usr /usr/local /usr/local/pgsql $PHP_PGSQL; do
#    PGSQL_INC_CHK(/include)
#    el[]PGSQL_INC_CHK(/include/pgsql)
#    el[]PGSQL_INC_CHK(/include/postgresql)
#    fi
#  done
#
#  if test -z "$PGSQL_DIR"; then
#    AC_MSG_ERROR(Cannot find libpq-fe.h. Please specify the installation path of PostgreSQL)
#  fi
#
#  PGSQL_INCLUDE=-I$PGSQL_INCDIR
#  PGSQL_LIBDIR=$PGSQL_DIR/lib
#  test -d $PGSQL_DIR/lib/pgsql && PGSQL_LIBDIR=$PGSQL_DIR/lib/pgsql
#
#  old_LIBS=$LIBS
#  old_LDFLAGS=$LDFLAGS
#  LDFLAGS="$LDFLAGS -L$PGSQL_LIBDIR"
#  AC_CHECK_LIB(pq, PQcmdTuples,AC_DEFINE(HAVE_PQCMDTUPLES,1,[ ]))
#  AC_CHECK_LIB(pq, PQoidValue,AC_DEFINE(HAVE_PQOIDVALUE,1,[ ]))
#  AC_CHECK_LIB(pq, PQclientEncoding,AC_DEFINE(HAVE_PQCLIENTENCODING,1,[ ]))
#  AC_CHECK_LIB(pq, pg_encoding_to_char,AC_DEFINE(HAVE_PGSQL_WITH_MULTIBYTE_SUPPORT,1,[ ]))
#  LIBS=$old_LIBS
#  LDFLAGS=$old_LDFLAGS
#
#  AC_DEFINE(HAVE_PGSQL,1,[ ])
#
#  PHP_ADD_LIBRARY_WITH_PATH(pq, $PGSQL_LIBDIR, PGSQL_SHARED_LIBADD)
#
#  PHP_EXTENSION(pgsql,$ext_shared)
#fi
#
#PHP_SUBST(PGSQL_INCLUDE)
#PHP_SUBST(PGSQL_SHARED_LIBADD)


## ==================================================================
##                 Checks for Informix ODBC driver
## ==================================================================

# FIXME: Replace `main' with a function in `-lxxxx':
AC_CHECK_LIB([ifxodbc], [main])

if test $ac_cv_lib_ifxodbc_main = yes; then
	HAVE_IFXODBC=yes
fi


## ==================================================================
##                 Checks for PostgreSQL ODBC driver
## ==================================================================

#libpsqlodbc.so

# FIXME: Replace `main' with a function in `-lpsqlodbc':
AC_CHECK_LIB([psqlodbc], [main])

if test $ac_cv_lib_psqlodbc_main = yes; then
	HAVE_PGODBC=yes
fi

#FIXME:
#warn user to run /usr/share/pgsql/odbc.sql script to add aditional
# PostgreSQL catalog extensions and functions for ODBC compliance
#do the same for ODBC managers, if you detect PH database installes

#FIXME:
#also check for headers, since they are not in PG ODBC RPM, they are
#in postgresql-devel, including /usr/lib/libpsqlodbc.a (so we don't need 
#PGSQLODBC RPM installed at all, unless we are using ODBC manager):
#/usr/include/pgsql/iodbc: iodbc.h isql.h isqlext.h


## ==================================================================
##                 Checks for iODBC ODBC manager support
## ==================================================================

#if test -z "$ODBC_TYPE"; then
AC_MSG_CHECKING(for iODBC support)

#force this check even if not specified on command line:
if test "$with_iodbc" = ""; then
	with_iodbc=yes
fi

AC_ARG_WITH(iodbc,
[  --with-iodbc[=DIR]      Include iODBC/Openlink support.  DIR is the iODBC base
                          install directory, defaults to /usr/local.],
[
  #PHP_WITH_SHARED
	if test "$withval" != "no"; then
		if test "$withval" = "yes"; then
	    	withval=/usr/local
		else
			WARN_LD_LIBRARY_PATH=1
		fi

		old_LIBS=$LIBS
		old_LDFLAGS=$LDFLAGS
		LDFLAGS="$LDFLAGS -L$withval/lib"
		#  AC_CHECK_LIB(pq, PQcmdTuples,AC_DEFINE(HAVE_PQCMDTUPLES,1,[ ]))
		# FIXME: Replace `main' with a function in `-liodbc':
		AC_CHECK_LIB([iodbc], [main])
		LIBS=$old_LIBS
		LDFLAGS=$old_LDFLAGS

		if test $ac_cv_lib_iodbc_main = yes; then
			A4GL_SQLTYPE=iodbc
			ODBC_LIB_NAME=iodbc
			HAVE_IODBC=yes

			#PHP_ADD_LIBRARY_WITH_PATH(iodbc, $withval/lib)
		    #PHP_ADD_INCLUDE($withval/include, 1)
		    ODBC_TYPE=iodbc
		    IODBC_INCLUDE=-I$withval/include
		    IODBC_LFLAGS=-L$withval/lib
		    IODBC_LIBS=-liodbc
		    AC_DEFINE(HAVE_IODBC,1,[ ])
		    #AC_MSG_RESULT(yes)
		else
		    AC_DEFINE(HAVE_IODBC,0,[ ])
		    #AC_MSG_RESULT(no)
		fi
	else
		AC_MSG_RESULT(disabled)
	fi
],[
	AC_MSG_RESULT(--with-iodbc not specified)
])

#AC_MSG_ERROR(Manual stop.)

## ==================================================================
##            Checks for unixODBC ODBC manager support
## ==================================================================

AC_MSG_CHECKING(for unixODBC support)

#force this check even if not specified on command line:
if test "$with_unixodbc" = ""; then
	with_unixodbc=yes
fi

AC_ARG_WITH(unixodbc,
[  --with-unixodbc[=DIR]   Include unixODBC support.  DIR is the unixODBC base
                          install directory, defaults to /usr/local.],
[
	#PHP_WITH_SHARED
	if test "$withval" = "yes"; then
    	withval=/usr/local
	else
		WARN_LD_LIBRARY_PATH=1
    fi

	if test "$withval" != "no"; then

		old_LIBS=$LIBS
		old_LDFLAGS=$LDFLAGS
		LDFLAGS="$LDFLAGS -L$withval/lib"
		#  AC_CHECK_LIB(pq, PQcmdTuples,AC_DEFINE(HAVE_PQCMDTUPLES,1,[ ]))
		# FIXME: Replace `main' with a function in `-lodbc':
		AC_CHECK_LIB([odbc], [main])
		LIBS=$old_LIBS
		LDFLAGS=$old_LDFLAGS

		if test $ac_cv_lib_odbc_main = yes; then
			#if more then one ODBC support was detected, this one will
            #ovverride A4GL_SQLTYPE set earlier in this script:
			A4GL_SQLTYPE=unixodbc
			ODBC_LIB_NAME=odbc
			HAVE_UNIXODBC=yes
		    UNIXODBC_INCLUDE=-I$withval/include
		    UNIXODBC_LFLAGS=-L$withval/lib
		    UNIXODBC_LIBS=-lodbc

			#ODBC_INCDIR=$withval/include
		    #ODBC_LIBDIR=$withval/lib
		    #ODBC_LFLAGS=-L$ODBC_LIBDIR
		    #ODBC_INCLUDE=-I$ODBC_INCDIR
		    #ODBC_LIBS=-lodbc
		    ODBC_TYPE=unixODBC
		    AC_DEFINE(HAVE_UNIXODBC,1,[ ])
		    #AC_MSG_RESULT(yes)
		else
			#ODBC_INCDIR=$withval/include
		    #ODBC_LIBDIR=$withval/lib
		    #ODBC_LFLAGS=-L$ODBC_LIBDIR
		    #ODBC_INCLUDE=-I$ODBC_INCDIR
		    #ODBC_LIBS=-lodbc
		    #ODBC_TYPE=unixODBC
		    AC_DEFINE(HAVE_UNIXODBC,0,[ ])
		    #AC_MSG_RESULT(no)
		fi
	else
		AC_MSG_RESULT(disbled)
	fi
],[
	AC_MSG_RESULT(--with-unixodbc not specified)
])

## ==================================================================
##            Checks for Easysoft ODBC-ODBC Bridge support
## ==================================================================

#Do this check only if we did not find any ODBC manager support already:
if test -z "$ODBC_TYPE"; then
AC_MSG_CHECKING(for Easysoft ODBC-ODBC Bridge support)
AC_ARG_WITH(esoob,
[  --with-esoob[=DIR]      Include Easysoft OOB support. DIR is the OOB base
                          install directory,
                          defaults to /usr/local/easysoft/oob/client.],
[
  #PHP_WITH_SHARED
  if test "$withval" = "yes"; then
    withval=/usr/local/easysoft/oob/client
  fi
  if test "$withval" != "no"; then
    ODBC_INCDIR=$withval/include
    ODBC_LIBDIR=$withval/lib
    ODBC_LFLAGS=-L$ODBC_LIBDIR
    ODBC_INCLUDE=-I$ODBC_INCDIR
    ODBC_LIBS=-lesoobclient
    ODBC_TYPE=ESOOB
    AC_DEFINE(HAVE_ESOOB,1,[ ])
    AC_MSG_RESULT(yes)
  else
    AC_MSG_RESULT(disabled)
  fi
],[
  AC_MSG_RESULT(--with-esoob not specified)
])
fi

## ==================================================================
##            Checks for custom ODBC support
## ==================================================================

#Do this check only if we did not find any ODBC manager support already:
if test -z "$ODBC_TYPE"; then
AC_MSG_CHECKING(for a custom ODBC support)
AC_ARG_WITH(custom-odbc,
[  --with-custom-odbc[=DIR]
                          Include a user defined ODBC support.
                          The DIR is ODBC install base directory,
                          which defaults to /usr/local.
                          Make sure to define CUSTOM_ODBC_LIBS and
                          have some odbc.h in your include dirs.
                          E.g., you should define following for
                          Sybase SQL Anywhere 5.5.00 on QNX, prior to
                          run configure script:
                              CPPFLAGS=\"-DODBC_QNX -DSQLANY_BUG\"
                              LDFLAGS=-lunix
                              CUSTOM_ODBC_LIBS=\"-ldblib -lodbc\".],
[
  if test "$withval" = "yes"; then
    withval=/usr/local
  fi
  if test "$withval" != "no"; then
    ODBC_INCDIR=$withval/include
    ODBC_LIBDIR=$withval/lib
    ODBC_LFLAGS=-L$ODBC_LIBDIR
    ODBC_INCLUDE=-I$ODBC_INCDIR
    ODBC_LIBS=$CUSTOM_ODBC_LIBS
    ODBC_TYPE=custom
    AC_DEFINE(HAVE_CODBC,1,[ ])
    AC_MSG_RESULT(yes)
  else
    AC_MSG_RESULT(disabled)
  fi
],[
  AC_MSG_RESULT(--with-custom-odbc not specified)
])
fi

#</This block was copied from PHP 4.x ext/odbc/config.m4 ---------------->

## ==================================================================
##                  Check for GTK+ GUI support
## ==================================================================

# FIXME: Replace `main' with a function in `-lgdk':
AC_CHECK_LIB([gdk], [main])
# FIXME: Replace `main' with a function in `-lglib':
AC_CHECK_LIB([glib], [main])
# FIXME: Replace `main' with a function in `-lgtk':
AC_CHECK_LIB([gtk], [main])

#check if we have all we need to make GTK GUI
if test $ac_cv_lib_gtk_main = yes; then
	if test $ac_cv_lib_glib_main = yes; then
		if test $ac_cv_lib_gdk_main = yes; then
			GTKBUILD=yes
			AUBITGUI=gtk
        fi
    fi
fi

#Fixme: we should test for GTK+ versions

## ==================================================================
##                  Check for Jabber IM support
## ==================================================================

# FIXME: Replace `main' with a function in `-liksemel':
AC_CHECK_LIB([iksemel], [main])

if test $ac_cv_lib_iksemel_main = yes; then
		JABBERBUILD=yes
fi

## ==================================================================
##                  Check for PDF support
## ==================================================================

# FIXME: Replace `main' with a function in `-lpdf':
AC_CHECK_LIB([pdf], [main])

if test $ac_cv_lib_pdf_main = yes; then
		A4GL_PDFTYPE=PDF
		USE_PDF=yes
        PDFBUILD=yes
fi

## ==================================================================
##                  Check for RPC lib support
## ==================================================================

#Note: on Linux, rpclib functions are in libc. On other systems, for
#example Windows/CygWin, this will be a separate library that we will need

if test "$test_rpclib" = "1"
then
  # FIXME: Replace `main' with a function in `-lrpclib':
	AC_CHECK_LIB([rpclib], [main])
	if test $ac_cv_lib_rpclib_main != yes; then
		AC_MSG_ERROR( "librpclib" not found. Please install RPC library. Stop.)
	fi
else
	AC_MSG_RESULT([Not checking rpclib because it's part of clib on Linux])
fi

## ==================================================================
##            Check for Perl generating compiler support
## ==================================================================

if test "$PERL" != no; then
	if test "$SWIG" != no; then
		#Fixme: How to test for MakeMaker Perl module ?
			PERLBUILD=yes
    fi
fi


## ==================================================================
##         Checks for libraries expected in standard locations
## ==================================================================

# FIXME: Replace `main' with a function in `-lc':
AC_CHECK_LIB([c], [main])
# FIXME: Replace `main' with a function in `-lcurses':
AC_CHECK_LIB([curses], [main])
# FIXME: Replace `main' with a function in `-ldl':
AC_CHECK_LIB([dl], [main])
# FIXME: Replace `main' with a function in `-lform':
AC_CHECK_LIB([form], [main])
# FIXME: Replace `main' with a function in `-lodbc32':
#not much point in checking this, it will allways be available on Windows,
#and does not exist anywhere else:
#AC_CHECK_LIB([odbc32], [main])
# FIXME: Replace `main' with a function in `-lpanel':
AC_CHECK_LIB([panel], [main])

#fixme: check version of curses
#AIX: Both form and panel h files are part of ncurses. Install it.



#fixme: stop if we don;t have any of above.

## ==================================================================
##                       Checks for header files
## ==================================================================

AC_HEADER_STDC
AC_CHECK_HEADERS([alloca.h errno.h locale.h malloc.h memory.h netdb.h netinet/in.h stddef.h stdlib.h string.h strings.h sys/socket.h sys/time.h unistd.h ])

## ==================================================================
##      Checks for typedefs, structures, and compiler characteristics
## ==================================================================

AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

AC_CHECK_SIZEOF(long, 8)
AC_CHECK_SIZEOF(int, 4)


## ==================================================================
##                   Checks for library functions
## ==================================================================

AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([floor gethostbyname inet_ntoa memset pow putenv re_comp regcomp select setenv setlocale socket strcasecmp strchr strdup strncasecmp strrchr strstr strtol])

#Should we check here for rpclib finctions on Linux?

## ==================================================================
##           Define which files we will substitute @xxx@ in
## ==================================================================

AC_CONFIG_FILES([Makefile
                etc/aubitrc
                incl/Makefile-common
				compilers/4glc/Makefile
                compilers/4glc/rules/Makefile
                compilers/fcompile/Makefile
                compilers/helpcompile/Makefile
                compilers/menus/Makefile
                lib/libpdf/Makefile
                lib/libgui/Makefile
                lib/libsql/nosql/Makefile
                lib/libsql/odbc/Makefile
				lib/extra_libs/file/Makefile
                lib/Makefile
                tools/adbaccess/Makefile
                tools/adbload/Makefile
                tools/html/Makefile
                tools/ide/Makefile
                tools/jabber/Makefile
                tools/odbctest/Makefile
                tools/test/gui/Makefile
                tools/test/Makefile])
AC_OUTPUT


## ==================================================================
##                Warnings and exit messages
## ==================================================================


dnl Warn if Informix support was requested but environment is not set up correctly.
if test "$INFORMIX_WARNING" != ""; then
		echo "$INFORMIX_WARNING"
fi

if test "$WARN_LD_LIBRARY_PATH" != ""; then
    echo ""
	echo "-------------------------------WARNING---------------------------------"
    echo "You have specified one or more --with-xxxx=<path> switches to"
    echo "'configure' script, specifiying package installed in non-standard <path>."
	echo "In most cases, you will have to add this path to your PATH and/or"
    echo "LD_LIBRARY_PATH in your run-time environment, for Aubit compilers and"
    echo "compiler programs to be able to find nedded prgrams and/or libraries"
    echo "that belong to this way specified package in non-standard place."
    echo ""
fi

echo ""
echo "Aubit 4gl compiler source code is now configured."
echo "Execute 'make' to compile it."
echo "Thank you for using Aubit 4gl." s
echo ""

#------------------------------ EOF --------------------------------
